package model.dungeon;

import model.global.GlobalDirection;

import java.io.File;

public class Dungeon {
    public void moveHero(GlobalDirection direction){

    }

    public void generateMaze(){

    }

    public void generateMaze(File filename){

    }

    public void updateAll(){

    }

    public void draw(){

    }
}
