package model.dungeon.entity;

public abstract class EntityFactory {

    /**
     * Generate a tile
     */
    public Entity generateHero() {
        return null;
    }

}
