package model.dungeon.entity;

public class Hero extends Entity {
    @Override
    public void draw() {

    }
}
