package model.dungeon.mazeFactory;

import model.dungeon.Maze;

import java.io.File;

public class MazeDefault implements MazeFactory {
    @Override
    public Maze getMaze() {
        return null;
    }

    @Override
    public Maze getMaze(File fileName) {
        return null;
    }
}
