package model.dungeon.tile;

public class Tile {

    public void draw(){

    }

    public void action(){

    }

}
