package model.global;

public class GlobalSprites {
    public int get8Sprite(){
        return 8;
    }
    public int get16Sprite(){
        return 16;
    }
}
