@startuml

package dungeon{

    class Dungeon{
        - currentMaze
        + moveHero(Direction d)
        + generateMaze()
        + generateMaze(File Filename)
        + updateAll()
        + draw()
    }

    class Maze{
        - toDrawEntity: List<Entity>
        - toDrawTile: List<Tile>
        + Maze(List<Tile> tiles, List<Entity> entities)
        + draw()
        + updateEntities()
        + moveEntity(Entity e, Direction d)
        + moveEntity(Entity e)
        - canMove(Entity i, int x, int y): boolean
    }

    package tile{

        class Tile{

        }

        note "Class diagram of tiles" as N1

    }

    package entity{

        abstract Entity{

        }

        class Hero << (S,#FF7700) Singleton >>{

        }

        class EntityFactory << (S,#FF7700) Singleton >>{

        }

    }

    package mazeFactory{

        interface MazeFactory{
            + {static}getMaze(): Maze
            + {static}getMaze(File fileName)
        }

        class MazeFile{
            - File: fileName
            + getMaze(): Maze
            + getMaze(File fileName)
        }

        class MazeDefault{
            + getMaze(): Maze
            + getMaze(File fileName)
        }

    }

}

class TextureFactory{
    + {static}getMonster()
    + {static}getHero()
    + {static}getEmptyTile()
    + {static}getWall()
    + {static}getTrap()
    + {static}getTreasure()
}

class SpriteManager{
    + currentSprite: int
    + SpriteSheet: Image
    + SpriteManager(Image sprite)
    + setSprite(int x, int y)
    + getCurrentSprite(): Image
}

class GlobalSprite{
    + {static} get8Sprite():int
    + {static} get16Sprite():int
}

enum GlobalDirection{
    + {static} UP
    + {static} DOWN
    + {static} LEFT
    + {static} RIGHT
    + {static} IDLE
}

MazeDefault -left-|> MazeFactory
Dungeon "1" -left-> "*" Maze: -maze
Dungeon "1" --> "1" MazeFactory: -mazeFactory
Maze "1" --> "*" Tile: -tiles
Maze "1" -up-> "*" Entity: -entities

EntityFactory .right.> Entity : create

Hero --|> Entity
Dungeon "1" --> "1" Entity : -hero

MazeFile --|> MazeFactory

Tile --> "1" SpriteManager
Entity -right-> "1" SpriteManager

@enduml